--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,20 @@
   "keywords": ["http", "socks", "proxy"],
   "homepage": "https://github.com/serps/proxy-server",
   "license": "Fair",
-
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/kungvwow/http"
+    }
+  ],
   "authors": [
     {
       "name": "Soufiane GHZAL",
       "homepage": "https://github.com/gsouf"
+    },
+    {
+      "name": "Charles Astwood",
+      "homepage": "https://github.com/charlesastwood"
     }
   ],
 
@@ -27,17 +36,20 @@
   },
 
   "require": {
-    "php": ">=5.5.9",
-    "clue/socks-react": "^0.4.0",
-    "react/http": "dev-streaming-multipart#b888423ea0ee65e89868c677b97f03bc66b176ae"
+    "php": ">=7.2",
+    "clue/socks-react": "v0.4.0",
+    "react/http": "dev-streaming-multipart#b888423ea0ee65e89868c677b97f03bc66b176ae",
+    "ext-curl": "*"
   },
 
   "require-dev":{
-    "phpunit/phpunit": "4.1.2",
-    "squizlabs/php_codesniffer": "~2.5",
-    "symfony/process": "^3.0"
+    "phpunit/phpunit": "~8.5",
+    "squizlabs/php_codesniffer": "3.*",
+    "symfony/process": "4.4.*",
+    "ext-curl": "*",
+    "ext-json": "*"
   },
-  
+
   "scripts": {
     "test": "vendor/bin/phpunit -c phpunit.dist.xml && echo \"\\n>> Checking code standards\\n\" && test/bin/phpcs.bash emacs",
     "csfix": "test/bin/phpcbf.bash",
